Transfer: Fix overlapping with Accounts by resetting of `z-index`

--- a/src/pages/Transfer/Transfer.scss
+++ b/src/pages/Transfer/Transfer.scss
@@ -2,11 +2,19 @@
 
 .transfer.mobile-page {
   .swiper-container /deep/ {
+    z-index: auto;
+
     .swiper-wrapper {
+      z-index: auto;
       padding-bottom: 35px;
     }
-    .swiper-pagination-bullet {
-      background: $aubergine;
+
+    .swiper-pagination {
+      z-index: auto;
+
+      &-bullet {
+        background: $aubergine;
+      }
     }
   }
 
